<resources>
    <string name="app_name">My Academy</string>
    <string name="orig">orig</string>
    <string name="patch">patch</string>
    <string name="bask">Bask</string>
    <string name="text_view_name">Avengers: End Game</string>
    <string name="some">13+</string>
    <string name="tag">Action, Adventure, Fantasy</string>
    <string name="star_icon">star_icon</string>
    <string name="reviews">125 Reviews</string>
    <string name="storyline">Storyline</string>
    <string name="after_the_d">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="movie">movie</string>
    <string name="robert_downey">Robert Downey Jr.</string>
    <string name="chris_evans">Chris  Evans</string>
    <string name="mark_ruffalo">Mark  Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="warszawa_po">Movies list</string>
    <string name="movie_marwell">movie marwell</string>
    <string name="time">137 min</string>
    <string name="age_limits">13+</string>
</resources>