<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollViewCount"
    tools:context=".MovieDetailsActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/movie_detai">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/mask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/orig"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/orig" />

        <ImageView
            android:id="@+id/path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:contentDescription="@string/patch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/path" />

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/bask"
            android:textColor="@color/color_bask"
            app:layout_constraintBottom_toBottomOf="@+id/path"
            app:layout_constraintStart_toEndOf="@+id/path"
            app:layout_constraintTop_toTopOf="@+id/path" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/text_view_name"
            android:textColor="@color/color_name"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/mask"
            app:layout_constraintEnd_toEndOf="@+id/mask"
            app:layout_constraintStart_toStartOf="@+id/mask"
            app:layout_constraintTop_toBottomOf="@+id/mask" />

        <TextView
            android:id="@+id/some_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/some"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintStart_toStartOf="@+id/name" />

        <TextView
            android:id="@+id/tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/tag"
            android:textColor="@color/tag"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <ImageView
            android:id="@+id/star_icon_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/star_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tag"
            app:srcCompat="@drawable/staricon" />

        <ImageView
            android:id="@+id/star_icon_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/star_icon_1"
            app:layout_constraintStart_toEndOf="@+id/star_icon_1"
            app:layout_constraintTop_toTopOf="@+id/star_icon_1"
            app:srcCompat="@drawable/staricon" />

        <ImageView
            android:id="@+id/star_icon_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/star_icon_2"
            app:layout_constraintStart_toEndOf="@+id/star_icon_2"
            app:layout_constraintTop_toTopOf="@+id/star_icon_2"
            app:srcCompat="@drawable/staricon" />

        <ImageView
            android:id="@+id/star_icon_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/star_icon_3"
            app:layout_constraintStart_toEndOf="@+id/star_icon_3"
            app:layout_constraintTop_toTopOf="@+id/star_icon_3"
            app:srcCompat="@drawable/staricon" />

        <ImageView
            android:id="@+id/star_icon_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/star_icon_4"
            app:layout_constraintStart_toEndOf="@+id/star_icon_4"
            app:layout_constraintTop_toTopOf="@+id/star_icon_4"
            app:srcCompat="@drawable/stariconempty" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/reviews"
            android:textColor="@color/color_reviews"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/star_icon_5"
            app:layout_constraintStart_toEndOf="@+id/star_icon_5"
            app:layout_constraintTop_toTopOf="@+id/star_icon_5" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/storyline"
            android:textColor="@color/color_name"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/star_icon_1" />

        <TextView
            android:id="@+id/after_the_d"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/after_the_d"
            android:textColor="@color/color_name"
            android:alpha="0.75"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyline" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/after_the_d" />

        <ImageView
            android:id="@+id/movie1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/movie"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/movie2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast"
            app:srcCompat="@drawable/movie" />

        <TextView
            android:id="@+id/robert_down"
            android:text="@string/robert_downey"
            app:layout_constraintTop_toBottomOf="@+id/movie1"
            app:layout_constraintEnd_toEndOf="@+id/movie1"
            app:layout_constraintStart_toStartOf="@+id/movie1"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/stule_title_actors" />

        <ImageView
            android:id="@+id/movie2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/movie"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/movie1"
            app:layout_constraintEnd_toStartOf="@+id/movie3"
            app:layout_constraintStart_toEndOf="@+id/movie1"
            app:layout_constraintTop_toTopOf="@+id/movie1"
            app:srcCompat="@drawable/movie2" />

        <TextView
            android:id="@+id/chrisevans"
            android:text="@string/chris_evans"
            app:layout_constraintTop_toBottomOf="@+id/movie2"
            app:layout_constraintEnd_toEndOf="@+id/movie2"
            app:layout_constraintStart_toStartOf="@+id/movie2"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/stule_title_actors" />

        <ImageView
            android:id="@+id/movie3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/movie"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/movie2"
            app:layout_constraintEnd_toStartOf="@+id/movie4"
            app:layout_constraintStart_toEndOf="@+id/movie2"
            app:layout_constraintTop_toTopOf="@+id/movie2"
            app:srcCompat="@drawable/movie3" />

        <TextView
            android:id="@+id/mark_ruffalo"
            android:text="@string/mark_ruffalo"
            app:layout_constraintTop_toBottomOf="@+id/movie3"
            app:layout_constraintEnd_toEndOf="@+id/movie3"
            app:layout_constraintStart_toStartOf="@+id/movie3"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/stule_title_actors" />

        <ImageView
            android:id="@+id/movie4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/movie3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie3"
            app:layout_constraintTop_toTopOf="@+id/movie1"
            app:srcCompat="@drawable/movie4"
            android:contentDescription="@string/movie"/>

        <TextView
            android:id="@+id/chris_hemsworth"
            android:text="@string/chris_hemsworth"
            app:layout_constraintTop_toBottomOf="@+id/movie4"
            app:layout_constraintEnd_toEndOf="@+id/movie4"
            app:layout_constraintStart_toStartOf="@+id/movie4"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/stule_title_actors" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>