<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center_horizontal">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/movie_detai"
    android:padding="4dp"
    android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="248dp"
            android:contentDescription="@string/movie_marwell"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/warszawa_po"
            app:srcCompat="@drawable/movie_marwell"
            android:foreground="@drawable/gradient_shape"/>

        <ImageView
            android:id="@+id/like"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            tools:src="@drawable/grey_like"
            app:layout_constraintRight_toRightOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/age_limits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="8dp"
            android:text="@string/age_limits"
            android:padding="4dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:alpha="0.9"
            android:background="@drawable/rectangle"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView" />

        <TextView
            android:id="@+id/tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto"
            android:text="@string/tag"
            android:textColor="@color/tag"
            android:textSize="8sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/CustomRatingBar"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tag"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/reviews"
            android:textColor="@color/color_reviews"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toTopOf="@+id/ratingBar" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/text_view_name"
            android:textColor="@color/color_name"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/ratingBar"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <TextView
            android:id="@+id/timeMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/color_reviews"
            android:textSize="8sp"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

</androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

